--- a/src/commonCSS/root.css
+++ b/src/commonCSS/root.css
@@ -2,6 +2,7 @@
     --color_prim: #754B2B;
     --color_prim_light: #9A6339;
     --color_white: #FFFFFF;
-
+    --color_contrast: #407CAA;
+    
     --bg_img_setting: no-repeat center;
 }
