--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,14 @@
 html {
     font-size: 4px;
 }
-body {
+body::after {
+    content: "";
+    position: absolute;
+    inset: 0;
+    z-index: -1;
     background: url("./assets/background.jpeg") var(--bg_img_setting);
     background-size: cover;
-    height: 100vh;
+    opacity: 35%;
 }
 * {
     margin: 0;
