--- a/src/components/ExerciseRecord/ExerciseRecord.css
+++ b/src/components/ExerciseRecord/ExerciseRecord.css
@@ -1,7 +1,7 @@
 #exercise_record {
     background-color: var(--color_white);
     border-radius: 2rem;
-    padding: 3rem 4rem 5rem;
+    padding: 3rem 4rem 2.5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -15,9 +15,36 @@
 }
 #exercise_record #record_table {
     display: grid;
-    grid-template: auto auto / auto auto;
-    grid-gap: 2.5rem;
+    grid-template-columns: auto 1fr;
+    grid-column-gap: 2.5rem;
     font-size: 4rem;
+
+}
+#exercise_record #record_table #days {
+    display: grid;
+    grid-template: repeat(7, 16px) / repeat(1, auto);
+    grid-gap: 8px;
+
+}
+#exercise_record #record_table #calendar {
+    display: flex;
+    flex-direction: column;
+    row-gap: 2.5rem;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    padding-bottom: 2.5rem
+}
+#exercise_record #record_table #calendar::-webkit-scrollbar {
+    display: block;
+    height: 2rem;
+
+}
+#exercise_record #record_table #calendar::-webkit-scrollbar-thumb {
+    background: var(--color_prim);
+    border-radius: 1rem;
+}
+#exercise_record #record_table #calendar::-webkit-scrollbar-thumb:hover {
+    background: var(--color_prim_light);
 }
 #exercise_record #record_table #months {
     display: grid;
@@ -27,13 +54,6 @@
 }
 #exercise_record #record_table #months label {
     text-transform: capitalize;
-}
-#exercise_record #record_table #days {
-    display: grid;
-    grid-column: 1 / 2;
-    grid-row: 2 / 3;
-    grid-template: repeat(7, 16px) / repeat(1, auto);
-    grid-gap: 8px;
 }
 #exercise_record #record_table #dates {
     display: grid;
