--- a/src/commonCSS/root.css
+++ b/src/commonCSS/root.css
@@ -3,6 +3,7 @@
     --color_prim_light: #9A6339;
     --color_white: #FFFFFF;
     --color_contrast: #407CAA;
-    
+
     --bg_img_setting: no-repeat center;
+    --shadow_small: 2px 2px 2px rgba(0 0 0 / 0.25);
 }
