--- a/src/commonCSS/root.css
+++ b/src/commonCSS/root.css
@@ -4,6 +4,7 @@
     --color_white: #FFFFFF;
     --color_contrast: #407CAA;
 
+    --icon_size: contain;
     --bg_img_setting: no-repeat center;
     --shadow_small: 2px 2px 2px rgba(0 0 0 / 0.25);
 }
