--- a/src/pages/Admin/Categories/Categories.css
+++ b/src/pages/Admin/Categories/Categories.css
@@ -3,7 +3,39 @@
     flex-direction: column;
     align-items: center;
 }
-
-#categories-dropdown {
+#categories #content {
+    display: flex;
+    flex-direction: column;
+    row-gap: 4rem;
+    align-items: center;
+}
+#categories #content #dropdown_big {
     width: clamp(400px, 30vw, 600px);
+}
+
+#categories #content .option {
+    width: 100%;
+    height: 7.5rem;
+    display: grid;
+    grid-template-columns: 20px 0.5fr 1fr;
+    grid-column-gap: 4rem;
+    align-items: center;
+}
+#categories #content .option > *:not(div) {
+    height: 100%;
+}
+#categories #content .option > * {
+    font-size: 3.5rem;
+    text-align: center;
+}
+#categories #content .option > .delete {
+    background: url(../../../assets/cross.svg) var(--bg_img_setting);
+    background-size: contain;
+    filter: var(--filter_red);
+    width: 100%;
+}
+#categories #content > .add {
+    background: none;
+    height: 30px;
+    width: 50%;
 }
