--- a/src/components/AddPanel/AddPanel.css
+++ b/src/components/AddPanel/AddPanel.css
@@ -13,7 +13,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-size: 3.5rem;
+    font-size: 4rem;
     row-gap: 7rem;
     border-radius: 16px;
 }
@@ -23,12 +23,12 @@
 #add_panel #panel > div {
     width: 100%;
     display: grid;
-    grid-template-columns: 1fr 3fr 30px;
+    grid-template-columns: 1fr 3fr 30px 30px;
     grid-column-gap: 6rem;
     align-items: center;
 }
 #add_panel #panel > div:first-of-type input {
-    grid-column: 2 / 4;
+    grid-column: 2 / 5;
 }
 #add_panel #panel > div:last-child {
     margin-top: 6rem;
@@ -45,4 +45,11 @@
 #add_panel #panel > div:last-child button:first-child {
     background-color: var(--color_prim);
     color: white;
+}
+#add_panel #panel .add_choice {
+    width: 100%;
+    aspect-ratio: 1 / 1;
+    border-radius: 50%;
+    border: 1px solid var(--color_prim);
+    background: none;
 }
