add/update/delete choices and categories

--- a/src/components/DropdownMenu/DropdownMenu.css
+++ b/src/components/DropdownMenu/DropdownMenu.css
@@ -50,4 +50,5 @@
     background: url(../../assets/cross.svg) var(--bg_img_setting);
     background-size: contain;
     filter: var(--filter_red);
+    height: 100%;
 }
