force set type when adding category

--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,11 @@ body::after {
     color: inherit;
     cursor: pointer;
 }
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 button {
     cursor: pointer;
 }
