--- a/src/pages/User/Dashboard/Dashboard.css
+++ b/src/pages/User/Dashboard/Dashboard.css
@@ -22,6 +22,51 @@
 #dashboard #years .years-button:active {
     box-shadow: 0 0 0;
 }
+#dashboard .record {
+    font-size: 3.5rem;
+}
+#dashboard .record #date {
+    width: 100%;
+    display: grid;
+    grid-template-columns: auto 1fr;
+    grid-column-gap: 5rem;
+    color: var(--color_prim_light);
+    align-items: center;
+}
+#dashboard .record #date .dash {
+    height: 1px;
+    background: var(--color_prim_light);
+}
+#dashboard .record .item {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    grid-column-gap: 15rem;
+}
+#dashboard .record .item .category {
+    display: grid;
+    grid-template-rows: auto 1fr;
+    grid-row-gap: 3rem;
+    justify-items: center;
+    font-size: 3.5rem;
+    color: var(--color_black);
+}
+#dashboard .record .item .category .line {
+    width: 1px;
+    height: 100%;
+    background: var(--color_black);
+}
+#dashboard .record .item .details {
+    padding-bottom: 30px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 3rem;
+}
+#dashboard .record .item .detail {
+    display: flex;
+    flex-direction: row;
+    column-gap: 10rem;
+}
+
 #dashboard .main-button {
     font-size: 4rem;
     padding: 4rem 6rem;
