--- a/src/commonCSS/root.css
+++ b/src/commonCSS/root.css
@@ -10,7 +10,8 @@
 
     --filter_red: invert(22%) sepia(97%) saturate(1228%) hue-rotate(328deg) brightness(101%) contrast(95%);
     --filter_green: invert(70%) sepia(84%) saturate(409%) hue-rotate(60deg) brightness(84%) contrast(87%);
-
+    --filter_main: invert(29%) sepia(29%) saturate(994%) hue-rotate(344deg) brightness(92%) contrast(85%);
+    
     --icon_size: contain;
     --bg_img_setting: no-repeat center;
     --shadow_small: 2px 2px 2px rgba(0 0 0 / 0.25);
