--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -1,5 +1,31 @@
 #menu {
     position: absolute;
-    top: 0;
-    right: 0;
+    top: 2rem;
+    right: 4rem;
+    display: flex;
+    column-gap: 4rem;
+}
+#menu button {
+    display: flex;
+    align-items: center;
+    column-gap: 2rem;
+    background: none;
+    font-size: 4rem;
+    line-height: 5rem;
+    color: var(--color_prim);
+}
+#menu .icon {
+    width: 5rem;
+    height: 100%;
+    background-size: contain;
+    filter: var(--filter_main);
+}
+#menu #home .icon {
+    background: url(../../assets/home.svg) var(--bg_img_setting);
+}
+#menu #categories .icon {
+    background: url(../../assets/record.svg) var(--bg_img_setting);
+}
+#menu #logout .icon {
+    background: url(../../assets/logout.svg) var(--bg_img_setting);
 }
