--- a/src/pages/User/Dashboard/Dashboard.css
+++ b/src/pages/User/Dashboard/Dashboard.css
@@ -10,7 +10,7 @@
     border-radius: 1rem;
     border: 1px solid var(--color_prim_light);
     background-color: transparent;
-    color: var(--color_white);
+    color: var(--color_prim_light);
     padding: 2rem 0;
     width: 20rem;
     display: flex;
@@ -18,6 +18,7 @@
     box-shadow: var(--shadow_small);
 }
 #dashboard #years .years-button[aria-selected="true"] {
+    color: var(--color_white);
     background-color: var(--color_prim_light);
 }
 #dashboard #years .years-button:active {
@@ -90,6 +91,7 @@
     width: 18px;
     aspect-ratio: 1 / 1;
     background-size: var(--icon_size);
+    filter: var(--filter_white);
 }
 #dashboard .main-button div#pen {
     background: url("../../../assets/pen.svg") var(--bg_img_setting);
