--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@ html {
 }
 body::after {
     content: "";
-    position: absolute;
+    position: fixed;
     inset: 0;
     z-index: -1;
     background: url("./assets/background.jpeg") var(--bg_img_setting);
