--- a/src/pages/User/SignUp/SignUp.css
+++ b/src/pages/User/SignUp/SignUp.css
@@ -1,15 +1,25 @@
 #signup {
-    width: clamp(400px, 40vw, 600px);
-    margin: 0 auto;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    row-gap: 10%;
+    padding-bottom: 15vh;
 }
 
-#signup, #signup section {
+#signup section {
+    width: clamp(300px, 40vw, 600px);
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
+    row-gap: 4rem;
 }
-#signup section, #signup input, #signup button {
+#signup input, #signup button {
     width: 100%;
+}
+#signup section button:first-of-type {
+    margin-top: 8rem;
 }
 #signup button {
     border-radius: 8px;
