--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -1,42 +1,106 @@
-#menu {
+#menu #panel {
     position: fixed;
     inset: 2rem 4rem auto;
     display: flex;
     justify-content: space-between;
-}
-#menu #greeting {
-    font-size: 4rem;
-    line-height: 5rem;
     color: var(--color_prim);
 }
-#menu #navigations {
+#menu #panel #greeting {
+    font-size: 3.5rem;
+    line-height: 5rem;
+}
+#menu #panel #navigations {
     display: flex;
     column-gap: 4rem;
 }
-#menu div button {
+#menu #panel div button {
     display: flex;
     align-items: center;
     column-gap: 2rem;
     background: none;
-    font-size: 4rem;
+    font-size: 3.5rem;
     line-height: 5rem;
-    color: var(--color_prim);
+    color: inherit;
 }
-#menu div .icon {
+#menu .icon {
     width: 5rem;
     height: 100%;
-    background-size: var(--icon_size);
+    background-size: var(--icon_size) !important;
     filter: var(--filter_main);
 }
-#menu div #home .icon {
-    background: url(../../assets/home.svg) var(--bg_img_setting);
+#menu #back.icon {
+    display: none;
+    height: 5rem;
+    background: url(../../assets/menu.svg) var(--bg_img_setting);
+    transition: filter 0.1s, transform 0.1s;
 }
-#menu div #student_list .icon {
-    background: url(../../assets/account.svg) var(--bg_img_setting);
+#menu #panel div #home .icon { background: url(../../assets/home.svg) var(--bg_img_setting) }
+#menu #panel div #student_list .icon { background: url(../../assets/account.svg) var(--bg_img_setting) }
+#menu #panel div #categories .icon { background: url(../../assets/record.svg) var(--bg_img_setting) }
+#menu #panel div #logout .icon { background: url(../../assets/logout.svg) var(--bg_img_setting) }
+#menu #hamburger.icon {
+    display: none;
+    height: 5rem;
+    background: url(../../assets/menu.svg) var(--bg_img_setting);
+    transition: filter 0.1s, transform 0.1s;
 }
-#menu div #categories .icon {
-    background: url(../../assets/record.svg) var(--bg_img_setting);
-}
-#menu div #logout .icon {
-    background: url(../../assets/logout.svg) var(--bg_img_setting);
+@media (max-width: 900px) {
+    #menu {
+        position: absolute;
+        inset: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 1000;
+        transition: background-color 0.1s;
+        background-color: rgba(0, 0, 0, 0);
+    }
+    #menu[aria-modal="true"] { background-color: rgba(0, 0, 0, 0.5) }
+    #menu[aria-modal="false"] {
+        background-color: rgba(0, 0, 0, 0);
+        pointer-events: none;
+    }
+
+    #menu #panel {
+        flex-direction: column;
+        justify-content: flex-start;
+        inset: 0 0 0 auto;
+        background-color: var(--color_prim_light);
+        padding: 11rem 0 4rem;
+        transition: transform 0.1s, opacity 0.1s;
+        color: var(--color_white);
+    }
+    #menu[aria-modal="false"] #panel { transform: translateX(100%); opacity: 0 }
+    #menu[aria-modal="true"] #panel { transform: translateX(0); opacity: 1 }
+
+    #menu #panel #greeting {
+        border-bottom: 1px solid var(--color_prim);
+        padding: 0 2rem 2rem 2rem;
+        font-size: 3rem;
+    }
+    #menu #panel #navigations{
+        flex-direction: column;
+        row-gap: 4rem;
+        padding: 4rem 2rem 0;
+        align-items: flex-end;
+    }
+    #menu #panel div button {
+        flex-direction: row-reverse;
+    }
+    #menu .icon { filter: var(--filter_white) }
+    #menu #back.icon {
+        display: block;
+        position: absolute;
+        inset: 4rem auto auto 2rem;
+        pointer-events: auto !important;
+        filter: var(--filter_main);
+    }
+    #menu[aria-modal="false"] #hamburger.icon { filter: var(--filter_main) }
+    #menu[aria-modal="true"] #hamburger.icon { filter: var(--filter_white); transform: rotate(630deg); }
+    #menu #hamburger.icon {
+        display: block;
+        position: absolute;
+        inset: 4rem 2rem auto auto;
+        z-index: 2;
+        pointer-events: auto !important;
+    }
 }
