--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@ body::after {
     box-sizing: border-box;
     outline: none;
     line-height: 1em;
+    font-family: 'Roboto', sans-serif;
 }
 * a {
     text-decoration: none;
