--- a/src/pages/Admin/StudentList/StudentList.css
+++ b/src/pages/Admin/StudentList/StudentList.css
@@ -1,9 +1,16 @@
+main#student_list {
+    padding-top: 12vh;
+}
 #student_list #request {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: clamp(400px, 50vw, 800px);
     row-gap: 1rem;
+    margin-top: 8rem;
+}
+#student_list #request h3 {
+    padding-bottom: 2rem;
 }
 #student_list #request .pending_account {
     display: grid;
