--- a/src/pages/User/AccountSetting/AccountSetting.css
+++ b/src/pages/User/AccountSetting/AccountSetting.css
@@ -2,14 +2,28 @@ main#account_setting {
     padding-top: 12vh;
     font-size: 3.5rem;
 }
-
-#account_setting #change_password {
+#account_setting > section {
+    margin-top: 8rem;
+}
+#account_setting #change_password, #account_setting #personal_info {
     display: grid;
     grid-column-gap: 4rem;
     grid-row-gap: 2rem;
     align-items: center;
     grid-template-columns: auto 1fr;
 }
-#account_setting h3 {
+#account_setting h3, #account_setting button {
     grid-column: 1 / 3;
+    text-align: center;
+}
+#account_setting button {
+    padding: 2rem;
+    border-radius: 4px;
+    margin-top: 2rem;
+    box-shadow: var(--shadow_small);
+    background-color: var(--color_prim_light);
+    color: var(--color_white);
+}
+#account_setting button:active {
+    box-shadow: none;
 }
